force-app/main/default/objects/Customer_Preference__c/Customer_Preference__c.object-meta.xml
<CustomObject>
    <label>Customer Preference</label>
    <pluralLabel>Customer Preferences</pluralLabel>
    
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>