force-app/main/default/objects/Customer_Preference__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <type>MasterDetail</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>Customer</relationshipName>

</CustomField>