force-app/main/default/objects/Customer_Preference__c/fields/Preferred_Branch__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Branch__c</fullName>
    <label>Preferred Branch</label>
    <type>Lookup</type>
    <referenceTo>Branch__c</referenceTo>
    <relationshipName>PreferredBranch</relationshipName>

</CustomField>