force-app/main/default/objects/Customer_Preference__c/fields/Preferred_Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Delivery_Time__c</fullName>
    <label>Preferred Delivery Time</label>
    <type>Text</type>
    <length>100</length>

</CustomField>