force-app/main/default/objects/Customer_Preference__c/fields/Preferred_Detergent__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Detergent__c</fullName>
    <label>Preferred Detergent</label>
    <type>Picklist</type>
    <valueSet>
    <valueSetDefinition>
        <value><fullName>Regular</fullName></value>
        <value><fullName>Hypoallergenic</fullName></value>
        <value><fullName>Fragrance-Free</fullName></value>
        <value><fullName>Eco-Friendly</fullName></value>
    </valueSetDefinition>
</valueSet>

</CustomField>