force-app/main/default/objects/Customer_Preference__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <label>Special Instructions</label>
    <type>LongTextArea</type>
    <length>32000</length>

</CustomField>