force-app/main/default/objects/Customer_Preference__c/fields/Subscription_Plan__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Plan__c</fullName>
    <label>Subscription Plan</label>
    <type>Picklist</type>
    <valueSet>
    <valueSetDefinition>
        <value><fullName>None</fullName></value>
        <value><fullName>Monthly</fullName></value>
        <value><fullName>Quarterly</fullName></value>
        <value><fullName>Annual</fullName></value>
    </valueSetDefinition>
</valueSet>

</CustomField>